# csmarketapi-client

./: .gitignore  README.md  example.env  pyproject.toml
.github/workflows/: github-actions-demo.yml  release.yml  run_tests.yml  test.yml
src/csmarketapi/: __init__.py  client.py  csmarketapi.py  enums.py  models.py
tests/: test_csmarketapi.py
