[project]
name = "csmarketapi"
version = "1.0.3"
description = "The official python library for CSMarketAPI"
readme = "README.md"
authors = [{ name = "Luis", email = "luis@softwerk.ai" }]
requires-python = ">=3.12"
dependencies = [
    "httpx>=0.28.1",
    "pydantic>=2.11.7",
]

classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]

[project.optional-dependencies]
dev = [
    "black",
    "ruff",
]
test = [
    "dotenv>=0.9.9",
    "pytest",
    "pytest-asyncio",
]

[tools.setuptools]
license = ["MIT"]
license-files = ["LICEN[CS]E*"]

[project.urls]
Homepage = "https://github.com/softwerk-org/csmarketapi-python"
Issues = "https://github.com/softwerk-org/csmarketapi-python/issues"

[build-system]
requires = ["setuptools >= 77.0.3"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
